[package]
name = "timy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
csv = "1.2"
chrono = "0.4.30"
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.4.4", features = ["derive"] }
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
home = "0.5.5"
xml = "0.8.10"
