[package]
name = "timy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = "4.5"
anyhow = "1.0"
